# pint-benchmark

./: README.md  setup.cfg
.github/workflows/: test.yml
benchmarks/benchmarks/: test_00_common.py  test_01_registry_creation.py  test_10_registry.py  test_20_quantity.py  test_30_numpy.py  util.py
benchmarks/benchmarks/data/: tinydef.txt
dev/bench/3.10/: data.js
dev/bench/3.11/: data.js
dev/bench/3.7/: data.js
dev/bench/3.8/: data.js
dev/bench/3.9/: data.js
