[metadata]
name = pint-benchmark
description = Pint benchmarks
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
url = https://github.com/hgrecco/pint-benchmark
license = BSD
version = 0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires=
    pint==0.19
    pytest
    pytest-benchmark
    numpy